fixed scrolling bug on mobile version of menuItem

--- a/app/[locale]/menu/menuItem.module.scss
+++ b/app/[locale]/menu/menuItem.module.scss
@@ -105,7 +105,6 @@
     }
 
     .name {
-        overflow: auto;
         white-space: normal;
     }
 
